crates/nash-parse/src/snapshots/nash_parse__module__tests__module_full.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nmodule Main exposing (main, Model, Msg(..))\n\nimport Html exposing (div)\nimport Platform.Cmd as Cmd\n\ntype alias Model = { count : Int }\n\ntype Msg\n    = Increment\n    | Decrement\n\nmain = 0\n"
---
Module {
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 44,
            },
        },
        value: Explicit(
            [
                Lower(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 27,
                            },
                        },
                        value: "main",
                    },
                ),
                Upper {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 29,
                            },
                            end: Position {
                                line: 1,
                                column: 34,
                            },
                        },
                        value: "Model",
                    },
                    privacy: Private,
                },
                Upper {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 36,
                            },
                            end: Position {
                                line: 1,
                                column: 39,
                            },
                        },
                        value: "Msg",
                    },
                    privacy: Public(
                        Region {
                            start: Position {
                                line: 1,
                                column: 40,
                            },
                            end: Position {
                                line: 1,
                                column: 42,
                            },
                        },
                    ),
                },
            ],
        ),
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 13,
                column: 1,
            },
        },
    ),
    imports: [
        Import {
            import: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 8,
                    },
                    end: Position {
                        line: 3,
                        column: 12,
                    },
                },
                value: "Html",
            },
            alias: None,
            exposing: Explicit(
                [
                    Lower(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 23,
                                },
                                end: Position {
                                    line: 3,
                                    column: 26,
                                },
                            },
                            value: "div",
                        },
                    ),
                ],
            ),
        },
        Import {
            import: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 8,
                    },
                    end: Position {
                        line: 4,
                        column: 20,
                    },
                },
                value: "Platform.Cmd",
            },
            alias: Some(
                "Cmd",
            ),
            exposing: Explicit(
                [],
            ),
        },
    ],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 12,
                    column: 1,
                },
                end: Position {
                    line: 13,
                    column: 1,
                },
            },
            value: Value {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 12,
                            column: 1,
                        },
                        end: Position {
                            line: 12,
                            column: 5,
                        },
                    },
                    value: "main",
                },
                arguments: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 12,
                            column: 8,
                        },
                        end: Position {
                            line: 12,
                            column: 9,
                        },
                    },
                    value: Int(
                        0,
                    ),
                },
                annotation: None,
            },
        },
    ],
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 8,
                    column: 1,
                },
                end: Position {
                    line: 12,
                    column: 1,
                },
            },
            value: Union {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 8,
                            column: 6,
                        },
                        end: Position {
                            line: 8,
                            column: 9,
                        },
                    },
                    value: "Msg",
                },
                arguments: [],
                ctors: [
                    Ctor {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 9,
                                    column: 7,
                                },
                                end: Position {
                                    line: 9,
                                    column: 16,
                                },
                            },
                            value: "Increment",
                        },
                        arguments: [],
                    },
                    Ctor {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 10,
                                    column: 7,
                                },
                                end: Position {
                                    line: 10,
                                    column: 16,
                                },
                            },
                            value: "Decrement",
                        },
                        arguments: [],
                    },
                ],
            },
        },
    ],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 6,
                    column: 1,
                },
                end: Position {
                    line: 8,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 12,
                        },
                        end: Position {
                            line: 6,
                            column: 17,
                        },
                    },
                    value: "Model",
                },
                arguments: [],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 20,
                        },
                        end: Position {
                            line: 6,
                            column: 35,
                        },
                    },
                    value: Record {
                        fields: [
                            FieldType {
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 6,
                                            column: 22,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 27,
                                        },
                                    },
                                    value: "count",
                                },
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 6,
                                            column: 30,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 33,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 30,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 33,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                            },
                        ],
                        ext: None,
                    },
                },
            },
        },
    ],
    binops: [],
}
