crates/nash-parse/src/snapshots/nash_parse__module__tests__module_header_simple_open.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nmodule Foo exposing (..)"
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 11,
            },
        },
        value: "Foo",
    },
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 21,
            },
            end: Position {
                line: 1,
                column: 25,
            },
        },
        value: Open,
    },
)
