crates/nash-parse/src/snapshots/nash_parse__module__tests__module_with_alias.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Point = { x : Int, y : Int }\n"
---
Module {
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    imports: [],
    values: [],
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 17,
                        },
                    },
                    value: "Point",
                },
                arguments: [],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 20,
                        },
                        end: Position {
                            line: 3,
                            column: 40,
                        },
                    },
                    value: Record {
                        fields: [
                            FieldType {
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 22,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 23,
                                        },
                                    },
                                    value: "x",
                                },
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 26,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 29,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 26,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 29,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                            },
                            FieldType {
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 31,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 32,
                                        },
                                    },
                                    value: "y",
                                },
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 35,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 38,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 35,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 38,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                            },
                        ],
                        ext: None,
                    },
                },
            },
        },
    ],
    binops: [],
}
